tests/NormalTests/paczka1/small_fuzzy/32493024.err
Error in line 3: zAkGX S784 38,9
Error in line 4: zAkGX S546 47,1
Error in line 1: 74s6M2J S784 44,7
